<resources>

    <string name="app_name">Todo App</string>
    <string name="landing_page_info">Copyright @ Piyusha Gurung 2022</string>
    <string name="app_title">Todo App</string>
    <string name="app_moto">Prioritize your day with a to-do list.</string>
    <string name="add_todos">Add todo button</string>
    <string name="add_title">Enter your title</string>
    <string name="add_subtitle">Enter your subtitle</string>
    <string name="add_description">Add your description</string>
    <string name="add_todos_btn">Add todo</string>
    <string name="update_todo_btn">Update todo</string>
    <string name="priority">Priority</string>
    <string name="delete">delete_btn</string>
    <string name="delete_info">Are you sure, you want to delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">01 January, 2023</string>
    <string name="search_text">Search here</string>
    <string name="email_login">Enter your email</string>
    <string name="password_login">Enter your password</string>
    <string name="username_signup">Enter your username</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="or">OR</string>
    <string name="logout_info">Are you sure, you want to logout ?</string>
    <string name="splash_heading">Write Your Todos !</string>
    <string name="logout_btn">Logout</string>
    <string name="no_account_redirect_to_signup">Don\'t have account ? Click here…</string>
    <string name="already_have_account">Already have an account ? Click here…</string>

</resources>